# Snake

./: .gitignore  Cargo.toml
snake-bevy/: Cargo.toml  index.html
snake-bevy/src/: main.rs
snake-game/: Cargo.toml
snake-game/src/: game.rs  game_with_menu.rs  internal.rs  lib.rs  menu.rs  snakelogic.rs  traits.rs
src/: main.rs
src/logic/: game.rs  game_with_menu.rs  grid.rs  internal.rs  menu.rs  mod.rs  snakelogic.rs
