[package]
name = "snake-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = [
    "x11",
    "serialize",
    "bevy_ui_render",
    "webgl2",
], default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }

snake-game = { path = "../snake-game" }
