[package]
name = "snake-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = [
    "x11",
    "serialize",
    "bevy_ui_render",
    "webgl2",
    "debug",
], default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
web-time = "1.1"
snake-game = { path = "../snake-game" }
